使用 Colab 创建而成

--- a/邪修python_2.ipynb
+++ b/邪修python_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrzdKyrUxVlh4HASJxJJ9v",
+      "authorship_tag": "ABX9TyMa5/r5D5Qrqstzk9bJen6t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,9 @@
       "source": [
         "邪修Python-2\n",
         "\n",
-        "第2课 廖雪峰函数\n"
+        "第2课 廖雪峰函数\n",
+        "\n",
+        "关于函数不懂的问百度AI"
       ],
       "metadata": {
         "id": "S_cVEdx0Kfe6"
@@ -40,20 +42,29 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 新段落"
+        "2.1 调用函数\n",
+        "\n",
+        "help(abs)\n",
+        "help(max)\n"
       ],
       "metadata": {
         "id": "Prvl376LKr5x"
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "# 新段落"
+        "help(abs)\n",
+        "\n",
+        "help(max)\n",
+        "\n",
+        "help(hex)"
       ],
       "metadata": {
-        "id": "40DQSy8RKsiR"
-      }
+        "id": "nWeClNACMQsx"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
